# FixRoute

./: .dockerignore  .gitignore  .prettierignore  .terraformignore  15-fixroute.md  AGENTS.md  README.md  docker-compose.yml  skills-lock.json
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  manage.py  pyproject.toml
backend/ai/classification/: classifier.py
backend/ai/embeddings/: embedder.py
backend/ai/troubleshooting/: knowledge_base.py
backend/apps/analytics/: apps.py  services.py
backend/apps/analytics/api/: urls.py  views.py
backend/apps/dispatch/: apps.py  models.py  services.py  services_estimate.py
backend/apps/dispatch/api/: dispatch_views.py  estimate_views.py  serializers.py  urls.py  views.py
backend/apps/dispatch/migrations/: 0001_initial.py
backend/apps/intake/: apps.py  models.py  services.py
backend/apps/intake/api/: serializers.py  urls.py  views.py
backend/apps/intake/migrations/: 0001_initial.py
backend/apps/triage/: apps.py  models.py  services.py
backend/apps/triage/api/: urls.py
backend/apps/triage/migrations/: 0001_initial.py
backend/apps/vendormanagement/: apps.py  models.py  services.py
backend/apps/vendormanagement/api/: serializers.py  urls.py
backend/apps/vendormanagement/migrations/: 0001_initial.py
backend/common/: apps.py  models.py  tasks.py  telemetry.py
backend/common/auth/: oidc.py  permissions.py
backend/common/db/: soft_delete.py
backend/common/logging/: config.py
backend/common/middleware/: audit.py  correlation_id.py  tenant.py
backend/common/migrations/: 0001_initial.py
backend/common/notifications/: acs.py  push.py  service.py
backend/common/storage/: blob.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: init_pgvector.sql
docs/: FixRoute-Overview.md  LinkedIn-Pitch.md
docs/presentations/: FixRoute-Client-Presentation.pptx  build_deck.js
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
(+41 files in other folders)
